# self-healing-ml

./: .gitignore  README.md  docker-compose.yml  model.joblib  patch.diff  prompt_quality.md  prompt_template.md  pyproject.toml  report.json  self_heal.py
.github/workflows/: monitor_drift.yml  self-heal.yml
config/: quality.yml
scripts/: make_mini_dataset.py  monitor_drift.py
src/: evaluate.py  evaluate.py.rej  logger.py  train.py
tests/: test_metrics.py  test_smoke.py  test_train_pipeline.py
